birdfont (0.28) stable;

  * Kerning classes
  * Copy and paste paths between windows

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sat Aug 24 22:12:04 CEST 2013

birdfont (0.27) stable;

  * Rotate paths
  * Flip path
  * Convert segments to lines
  * Symmetrical control points
  * Use glyphs as backgrounds

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Aug 11 16:33:47 CEST 2013

birdfont (0.26) stable;

  * Bug fixes for Mac OS X

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Aug  4 18:28:40 CEST 2013

birdfont (0.25) stable;

  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Thu Aug  1 23:08:20 CEST 2013

birdfont (0.24) stable;

  * New overview tab
  * Two control point handles for quadratic paths
  * Better conversion from SVG to TTF
  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Wed Jul 31 14:34:12 CEST 2013

birdfont (0.23) stable;

  * Bugfixes 

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Jul  14 19:25:00 CEST 2013

birdfont (0.22) stable;

  * Bugfixes and many changes to make BirdFont run on Mac OS X

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Jul  14 01:24:00 CEST 2013

birdfont (0.21) stable;

  * Bugfixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Jul  5 22:45:40 CEST 2013

birdfont (0.20) stable;

  * Descriptive fields in TTF fonts (like version number and name)
  * Kerning for both Chrome and Firefox
  * Read TTF font instead of SVG font in html template
  * Bugfixes
  * Improved translations

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Jul  5 14:13:25 CEST 2013

birdfont (0.19) stable;

  * Descriptions from the Unicode Character Database
  * A new file format (.bf replaces .ffi)
  * Bugfixes
  * Two quadratic points with a hidden point in between creates a quadratic path with two line handles
  * Quadratic points is now the default
  * Scrollbar
  * TTF export on MacOS
  * French translation
